# Pattern-Based-Compression

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build.sh  clean_build.sh  install_pbc.sh  integration_test.sh  run_example.sh  run_tests.sh
dataset/: Apache
example/: pbc_compress.cc  pbc_train_pattern.cc  run_example.sh
scripts/: publish_pbc.sh
src/: CMakeLists.txt  compress-c.cc  compress-c.h
src/base/: memcpy.h
src/common/: utils.cc  utils.h
src/compress/: compress.cc  compress.h  compress_factory.cc  compress_factory.h  pbc_fse_compress.cc  pbc_fse_compress.h  pbc_fsst_compress.cc  pbc_fsst_compress.h  pbc_only_compress.cc  pbc_only_compress.h  pbc_zstd_compress.cc  pbc_zstd_compress.h
src/tools/: pbc.cc
src/train/: pbc_train.cc  pbc_train.h  thread_pool.cc  thread_pool.h
src/unit_test/: test_main.cc  test_pbc.cc
